--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my data pipline\n",
+    "# set data pipline and hyper-parameters\n",
     "data = load_iris()\n",
     "trainX = data.data\n",
     "trainY = data.target\n",
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# activation function\n",
+    "# define activation functions\n",
     "nothing = lambda x: x\n",
     "sigmoid = lambda x: 1 / (1 + 2.7182**(-x))\n",
     "bipolar = lambda xSet: np.array([-1 if x < 0 else 1 for x in xSet])\n",
@@ -87,6 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define gradient descent rule\n",
     "def gradient_descent_rule(name):\n",
     "    global trainX, trainY, weight, lr\n",
     "    \n",
@@ -112,6 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define predict\n",
     "def predict(case):\n",
     "    global weight\n",
     "    \n",
